--- a/.github/workflows/local.yml
+++ b/.github/workflows/local.yml
@@ -4,14 +4,18 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  print-patch-content:
+  local-test:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
       with:
         path: "smart-review"
+    - name: npm install
+      run: |
+        cd smart-review
+        npm install
     - name: Print patch content
-      uses: ./
+      uses: ./smart-review
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
