--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "smart-review",
   "version": "1.0.0",
   "description": "xx",
@@ -12,6 +13,8 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "chatgpt": "^5.1.2",
+    "node-fetch": "^3.3.1"
   }
 }
